# whereiam

./: CNAME  Cargo.toml  README.md  readme.md
.github/workflows/: build.yaml
src/: lib.rs  main.rs
