[package]
name = "whereiam"
version = "1.1.0"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
description = "Print working directory."
readme = "readme.md"
homepage = "https://github.com/UltiRequiem/whereami"
repository = "https://github.com/UltiRequiem/whereami"
keywords = ["cli", "pwd"]
categories = ["command-line-utilities"]
edition = "2018"
